4-k8s-examples/aad-auth-ingress-app.yaml
kind: Pod
apiVersion: v1
metadata:
  name: auth-test-app
  namespace: ${ namespace }
  labels:
    app: auth-test
spec:
  containers:
    - name: auth-test-app
      image: hashicorp/http-echo
      args:
        - "-text=auth-test"

---
kind: Service
apiVersion: v1
metadata:
  name: auth-test-service
  namespace: ${ namespace }
spec:
  selector:
    app: auth-test
  ports:
    - port: 5678 # Default port for image
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-test
  namespace: ${ namespace }
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/cluster-issuer: letsencrypt
    # domain name of aad-proxy
    nginx.ingress.kubernetes.io/auth-url: "https://${ auth_redirect_domain  }/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://${  auth_redirect_domain  }/oauth2/start?rd=$scheme%3A%2F%2F$host$escaped_request_uri"
    # `$cookie_aad`, where `aad` is a cookie name passed via `AAD_COOKIE_NAME` env
    #nginx.ingress.kubernetes.io/auth-cache-key: some_key
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  tls:
    - hosts:
        - ${ auth_test_domain }
      secretName: ${ secret_name }
  rules:
    - host: ${ auth_test_domain }
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: auth-test-service
                port:
                  number: 5678
